--- a/web/index.html
+++ b/web/index.html
@@ -27,6 +27,33 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyBhE7yNuVJwxJbpebMOPxBlhTCuEG9DMf0",
+    authDomain: "nfc-presentation.firebaseapp.com",
+    projectId: "nfc-presentation",
+    storageBucket: "nfc-presentation.appspot.com",
+    messagingSenderId: "1017232433048",
+    appId: "1:1017232433048:web:09829c6dd9c8b3475fd5ed",
+    measurementId: "G-MSCZS6G8G8"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
+  
+
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
@@ -93,6 +120,6 @@
       // Service workers not supported. Just drop the <script> tag.
       loadMainDartJs();
     }
-  </script>
+</script>
 </body>
 </html>
